list detected plugins